--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "har-replay",
-  "version": "0.0.10",
+  "version": "0.2.0",
   "description": "Utility to replay a HAR file",
   "author": "Avi Stramer",
   "keywords": [
@@ -14,8 +14,9 @@
   },
   "main": "index.js",
   "dependencies": {
-    "lodash": "^4.17.4",
-    "moment": "^2.17.1",
-    "request": "^2.79.0"
+    "axios": "^1.3.6",
+    "form-data": "^4.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4"
   }
 }
